# pyskani

./: .gitmodules  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  requirements.txt  test.yml
docs/: conf.py  index.rst  install.rst  requirements.txt
docs/_static/json/: switcher.json
docs/api/: database.rst  hit.rst  index.rst  sketch.rst
docs/guide/: copyright.rst  index.rst  install.rst
pkg/aur/: PKGBUILD.in
pyskani/: __init__.py
pyskani/_skani/: build.rs  hit.rs  lib.rs  sketch.rs  utils.rs
pyskani/tests/: __init__.py  data  test_ani.py  test_database.py  unittest.rs
src/pyskani/: __init__.py  _skani.pyi
src/pyskani/_skani/: hit.rs  lib.rs  sketch.rs  utils.rs
src/pyskani/tests/: test_ani.py  test_database.py  unittest.rs
