[package]
name = "pyskani"
version = "0.1.2"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
license = "MIT"
description = "PyO3 bindings and Python interface to skani, a method for fast fast genomic identity calculation using sparse chaining."
repository = "https://github.com/althonos/pyskani"
homepage = "https://github.com/althonos/pyskani/"
readme = "README.md"
categories = ["science"]
keywords = ["bioinformatics", "genomics", "average", "nucleotide", "identity"]
publish = false
edition = "2021"
build = "src/pyskani/_skani/build.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/pyskani/_skani/lib.rs"

[build-dependencies.built]
version = "0.7.3"
features = ["chrono", "cargo-lock"]

[dependencies]
bincode = "1.3.3"
pyo3 = "0.21.2"
pyo3-built = "0.5.0"

[dependencies.skani]
version = "0.1.1"
default-features = false

[features]
default = []
extension-module = ["pyo3/extension-module"]
nightly = ["pyo3/nightly"]

[[test]]
name = "unittest"
path = "pyskani/tests/unittest.rs"
harness = false
