[package]
name = "pyskani"
version = "0.1.2"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
license = "MIT"
description = "PyO3 bindings and Python interface to skani, a method for fast fast genomic identity calculation using sparse chaining."
repository = "https://github.com/althonos/pyskani"
homepage = "https://github.com/althonos/pyskani/"
readme = "README.md"
categories = ["science"]
keywords = ["bioinformatics", "genomics", "average", "nucleotide", "identity"]
publish = false
edition = "2021"
build = "src/pyskani/_skani/build.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/pyskani/_skani/lib.rs"
doctest = false

[build-dependencies.built]
version = "0.7.3"
features = ["chrono", "cargo-lock"]

[dependencies]
bincode = "1.3.3"
pyo3 = "0.22.5"
pyo3-built = "0.5.0"

[dependencies.skani]
version = "0.2.2"
git = "https://github.com/bluenote-1577/skani"
default-features = false
tag = "v0.2.2"

[features]
default = []
extension-module = ["pyo3/extension-module"]
nightly = ["pyo3/nightly"]

[[test]]
name = "unittest"
path = "src/pyskani/tests/unittest.rs"
harness = false
