[build-system]
requires = ["maturin ~=1.2"]
build-backend = "maturin"

[project]
name = "pyskani"
dynamic = ["version"]
description = "PyO3 bindings and Python interface to skani, a method for fast fast genomic identity calculation using sparse chaining."
readme = 'README.md'
requires-python = ">=3.7"
license = { file = "COPYING" }
authors = [
  { name = "Martin Larralde", email = "martin.larralde@embl.de" },
]
keywords = ["bioinformatics", "genomics", "average", "nucleotide", "identity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[project.urls]
"Homepage" = "https://github.com/althonos/pyskani/"
"Documentation" = "https://pyskani.readthedocs.io"
"Bug Tracker" = "https://github.com/althonos/pyskani/issues"
"Changelog" = "https://github.com/althonos/pyskani/blob/master/CHANGELOG.md"
# "Coverage" = "https://codecov.io/gh/althonos/pyskani/"
"Builds" = "https://github.com/althonos/pyskani/actions/"
"PyPI" = "https://pypi.org/project/pyskani"

[tool.maturin]
manifest-path = "Cargo.toml"
features = ["extension-module"]
python-source = "src"
module-name = "pyskani._skani"

[tool.cibuildwheel]
before-build = "pip install maturin"
test-command = "python -m unittest pyskani.tests -v"
build-verbosity = 1
free-threaded-support = false

[tool.cibuildwheel.linux]
environment = { PATH="$PATH:$HOME/.cargo/bin" }
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh /dev/stdin -y"

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING:",
    "@abc.abstractmethod",
    "@abc.abstractproperty",
    "raise NotImplementedError",
    "return NotImplemented",
    "raise UnexpectedError",
    "raise AllocationError",
]

[tool.mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

["tool.mypy-pyskani.tests.*"]
ignore_errors = true